jilles      2006/02/17 23:37:21 UTC	(20060217-4839)
  Log:
  Correct kline_t.expires manually on load instead of
  keeping <load time> + duration.
  

  Changes:	Modified:
  +2 -0		trunk/backend/flatfile.c (File Modified) 
  +2 -0		trunk/backend/mysql.c (File Modified) 
  +2 -0		trunk/backend/postgresql.c (File Modified) 


jilles      2006/02/17 23:31:06 UTC	(20060217-4837)
  Log:
  Make this work with Anope 1.7.13.
  It will also still work with Anope 1.6.x.
  

  Changes:	Modified:
  +29 -0	trunk/contrib/anope_convert.c (File Modified) 


nenolod     2006/02/13 20:37:34 UTC	(20060213-4829)
  Log:
  - Document atheme.account.set_password.
  

  Changes:	Modified:
  +1 -0		trunk/contrib/xmlrpc_explorer.php (File Modified) 


nenolod     2006/02/13 20:18:28 UTC	(20060213-4827)
  Log:
  - Add atheme.account.set_password call.
  

  Changes:	Modified:
  +50 -0	trunk/modules/xmlrpc/account.c (File Modified) 


pfish       2006/02/13 10:35:10 UTC	(20060213-4825)
  Log:
  fix a crash
  

  Changes:	Modified:
  +1 -1		trunk/modules/userserv/listchans.c (File Modified) 


pfish       2006/02/13 10:32:54 UTC	(20060213-4821)
  Log:
  outdated
  

  Changes:	Modified:
  +1 -1		trunk/SVN-Access (File Modified) 


pfish       2006/02/13 10:29:40 UTC	(20060213-4819)
  Log:
  PRIV_CHAN_AUSPEX will see when a channel is MC_INHABIT
  

  Changes:	Modified:
  +3 -0		trunk/modules/chanserv/info.c (File Modified) 


jilles      2006/02/10 17:49:03 UTC	(20060210-4817)
  Log:
  Send and parse nefarious 0.5.x topic setter information.
  Should be ignored by 0.4.x.
  Not tested.
  

  Changes:	Modified:
  +2 -2		trunk/protocol/nefarious.c (File Modified) 


jilles      2006/02/10 17:33:05 UTC	(20060210-4815)
  Log:
  Nefarious improvements, from reading the source code (not tested)
  - complete halfops support
  - ban exception support
  - oper only cmodes
  - apparently don't need to clear +N here (only applies to local clients)
  

  Changes:	Modified: